--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.1",
+    "sass": "^1.65.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
